FIXED related thumbs CSS on mobile.

--- a/css/theme.css
+++ b/css/theme.css
@@ -149,6 +149,9 @@ aside .thumb {
 .tooltip-inner{padding:5px 8px;}
 
 
+@media (max-width: 480px) {
+  .col-sm-6 {width: 100%;}
+}
 @media (min-width: 481px) {
 
   h1 small {
